# MasarykBOT

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.bot  LICENSE  Procfile  README.md  __main__.py  app.json  bot.py  config.yml  docker-compose.yml  example_config.py  heroku.yml  mypy.ini  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.override.yml
assets/: FI_predmety.txt  database_setup.sql  eval_template.py  loaded_cogs.json  local_db.json  vyber-predmetov.json  vyber.json
bot/: Dockerfile  Dockerfile.bot  README.md  __main__.py  bot.py  constants.py  example_config.py  requirements.txt  utils.py
cogs/: aboutmenu.py  admin.py  antispam.py  backup.py  cog_manager.py  confessions.py  corona.py  errors.py  eval.py  events.py  fun.py  help.py  info.py  leaderboard.py  logger.py  math.py  music.py  picker.py  reactionPicker.py  reactionmenu.py  transitionToMUNI.py  verification.py
core/: admin.py  bot.py  events.py  help.py  logger.py  paginator.py  rules.py  taskManager.py
mysql-dump/: database_setup.sql
snekbox/: Dockerfile.snekbox  Dockerfile.web  gunicorn.conf.py  requirements.txt
sql/: _schemas.sql  cogs..sql  cogs.emojiboard.sql  cogs.leaderboard.sql  cogs.logger.sql  muni.registers.sql  muni.subjects.sql  server..sql  server.attachemnts.sql  server.categories.sql  server.channels.sql  server.emojis.sql  server.guilds.sql  server.messages.sql  server.reactions.sql  server.roles.sql  server.users.sql
tests/: Dockerfile.test  README.md  __main__.py  _autospec.py  conftest.py  helpers.py  test_database.py  test_helpers.py
(+413 files in other folders)
