[tool.poetry]
name = "masarykbot"
version = "3.0.0"
description = ""
authors = ["zloutek1 <zloutek1@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
"discord.py" = "^2.3.1"
dependency-injector = "^4.41.0"
sqlalchemy = "^2.0.17"
asyncpg = "^0.27.0"
aiohttp = "^3.8.4"
pytest = "^7.4.0"
python-dotenv = "^1.0.0"
rich = "^13.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.3.0"
mypy = "^1.4.1"
pre-commit = "^3.3.3"
aiosqlite = "^0.19.0"
assertpy = "^1.1"
sqlalchemy = {extras = ["mypy"], version = "^2.0.17"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
