[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["zloutek1 <zloutek1@gmail.com>"]
readme = "README.md"
packages = [{include = "bot", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
dpytest = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
